[package]
name = "spottybar"
author = "Richard McHorgh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
reqwest = "0.11.14"
snafu = "0.7.4"
tokio = {version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"]}
