[package]
name = "spottybar"
author = "Richard McHorgh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
reqwest = "0.11.14"
rocket = "0.5.0-rc.2"
serde = "1.0.152"
serde_json = "1.0.91"
snafu = "0.7.4"
tokio = {version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"]}
urlencoding = "2.1.2"
